[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pangu-precommit"
version = "0.1.4"
description = "Add pre-commit hooks for pangu.py (https://github.com/vinta/pangu.py)"
readme = "README.md"
scripts = {pangup = "pangup:cli"}
requires-python = ">=3.13"
dependencies = [
    "pangu>=4.0.6.1",
]
